--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <p class="descripcion">Emprendimiento que inició en pandemia (2020),<br> 
                 fue un aprendizaje que tuve en esa época <br>
                 que se convertiría en un proyecto y emprendimiento personal</p>
-            <img src="Imagenes/logo.png" alt="Logo" class="position-absolute top-0 end-0 m-3 rounded-circle" width="50" height="50">
         </div>
     </header>
 
@@ -29,7 +28,7 @@
     </nav>
 
     <section class="slider container my-4 p-3 bg-white border rounded">
-        <img src="Imagenes/scrunchies2.jpeg" alt="Slider Image" class="img-fluid">
+        <img src="scrunchies2.jgeg" alt="Slider Image" class="img-fluid">
     </section>
 
     <section id="productos" class="container my-4">
