--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <section class="slider container my-4 p-3 bg-white border rounded">
-        <img src="scrunchies2.jgeg" alt="Slider Image" class="img-fluid">
+        <img src="scrunchies2.jpeg" alt="Slider Image" class="img-fluid">
     </section>
 
     <section id="productos" class="container my-4">
