--- a/index.html
+++ b/index.html
@@ -4,37 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Queen Bamba</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <header class="bg-warning text-center p-4 position-relative">
-        <div class="container">
-            <h1 class="titulo">Queen Bamba</h1>
-            <h2 class="descripcion">Productos, historia y experiencias</h2>
-            <p class="descripcion">Emprendimiento que inició en pandemia (2020),<br> 
-                fue un aprendizaje que tuve en esa época <br>
-                que se convertiría en un proyecto y emprendimiento personal</p>
-        </div>
+    <header>
+        <h1 class="titulo">Queen Bamba</h1>
+        <h2 class="descripcion">Productos, historia y experiencias</h2>
+        <p class="descripcion">Emprendimiento que inició en pandemia (2020),<br> 
+            fue un aprendizaje que tuve en esa época <br>
+            que se convertiría en un proyecto y emprendimiento personal</p>
     </header>
 
-    <nav class="bg-dark py-2">
-        <div class="container">
-            <ul class="nav justify-content-center nav-list">
-                <li class="nav-item"><a class="nav-link text-white" href="#productos">Productos</a></li>
-                <li class="nav-item"><a class="nav-link text-white" href="#contacto">Contacto</a></li>
-            </ul>
-        </div>
+    <nav>
+        <ul class="nav-list">
+            <li><a href="#productos">Productos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
     </nav>
 
-    <section class="slider container my-4 p-3 bg-white border rounded">
-        <img src="scrunchies2.jpeg" alt="Slider Image" class="img-fluid">
+    <section class="slider">
+        <img src="scrunchies2.jpeg" alt="Slider Image">
     </section>
 
-    <section id="productos" class="container my-4">
+    <section id="productos">
         <h2>Productos</h2>
-        <table class="table table-bordered">
-            <thead class="thead-light">
+        <table>
+            <thead>
                 <tr>
                     <th>Producto</th>
                     <th>Descripción</th>
@@ -65,17 +60,11 @@
         </table>
     </section>
 
-    <footer id="contacto" class="bg-dark text-white text-center py-4">
-        <div class="container">
-            <p>Isabella Díaz Franco <br>
-            Correo: <a href="mailto:isadiazfr@gmail.com" class="text-warning">isadiazfr@gmail.com</a><br>
-            Instagram: <a href="https://www.instagram.com/QueenBamba1" target="_blank" class="text-warning">@QueenBamba1</a> <br>
-            Institución: Skolmi</p>
-        </div>
+    <footer id="contacto">
+        <p>Isabella Díaz Franco <br>
+        Correo: <a href="mailto:isadiazfr@gmail.com">isadiazfr@gmail.com</a><br>
+        Instagram: <a href="https://www.instagram.com/QueenBamba1" target="_blank">@QueenBamba1</a> <br>
+        Institución: Skolmi</p>
     </footer>
-
-    <div class="alert alert-info text-center mt-3">
-        Esta página utiliza Bootstrap para la estructura y componentes.
-    </div>
 </body>
 </html>
